--- a/package.json
+++ b/package.json
@@ -4,16 +4,8 @@
   "description": "Web interface for Jellyfin",
   "repository": "https://github.com/jellyfin/jellyfin-web",
   "license": "GPL-2.0-or-later",
+  "type": "module",
   "devDependencies": {
-    "@babel/core": "7.20.12",
-    "@babel/eslint-parser": "7.19.1",
-    "@babel/eslint-plugin": "7.19.1",
-    "@babel/plugin-proposal-class-properties": "7.18.6",
-    "@babel/plugin-proposal-private-methods": "7.18.6",
-    "@babel/plugin-transform-modules-umd": "7.18.6",
-    "@babel/preset-env": "7.20.2",
-    "@babel/preset-react": "7.18.6",
-    "@babel/preset-typescript": "7.18.6",
     "@types/escape-html": "1.0.2",
     "@types/loadable__component": "5.13.4",
     "@types/lodash-es": "4.17.6",
@@ -22,15 +14,10 @@
     "@typescript-eslint/eslint-plugin": "5.48.1",
     "@typescript-eslint/parser": "5.48.1",
     "@uupaa/dynamic-import-polyfill": "1.0.2",
-    "autoprefixer": "10.4.13",
-    "babel-loader": "9.1.2",
-    "babel-plugin-dynamic-import-polyfill": "1.0.0",
-    "clean-webpack-plugin": "4.0.0",
+    "@vitejs/plugin-legacy": "3.0.2",
+    "@vitejs/plugin-react-swc": "3.0.1",
     "confusing-browser-globals": "1.0.11",
-    "copy-webpack-plugin": "11.0.0",
     "cross-env": "7.0.3",
-    "css-loader": "6.7.3",
-    "cssnano": "5.1.14",
     "es-check": "7.0.1",
     "eslint": "8.32.0",
     "eslint-plugin-compat": "4.0.2",
@@ -41,25 +28,17 @@
     "eslint-plugin-react": "7.32.0",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-sonarjs": "0.18.0",
-    "expose-loader": "4.0.0",
-    "html-loader": "4.2.0",
-    "html-webpack-plugin": "5.5.0",
-    "mini-css-extract-plugin": "2.7.2",
-    "postcss": "8.4.21",
-    "postcss-loader": "7.0.2",
-    "postcss-preset-env": "7.8.3",
-    "postcss-scss": "4.0.6",
-    "sass": "1.57.1",
-    "sass-loader": "13.2.0",
-    "source-map-loader": "4.0.1",
-    "style-loader": "3.3.1",
+    "rollup-plugin-analyze": "0.2.0",
     "stylelint": "14.16.1",
     "stylelint-config-rational-order": "0.1.2",
     "stylelint-no-browser-hacks": "1.2.1",
     "stylelint-order": "6.0.1",
     "stylelint-scss": "4.3.0",
-    "ts-loader": "9.4.2",
+    "terser": "5.16.1",
     "typescript": "4.9.4",
+    "vite": "4.1.1",
+    "vite-plugin-dynamic-import": "1.2.7",
+    "vite-plugin-pwa": "0.14.1",
     "webpack": "5.75.0",
     "webpack-cli": "5.0.1",
     "webpack-dev-server": "4.11.1",
@@ -131,7 +110,6 @@
   "scripts": {
     "start": "npm run serve",
     "serve": "webpack serve --config webpack.dev.js",
-    "prepare": "node ./scripts/prepare.js",
     "build:development": "webpack --config webpack.dev.js",
     "build:production": "cross-env NODE_ENV=\"production\" webpack --config webpack.prod.js",
     "build:check": "tsc --noEmit",
